--- a/css/style.css
+++ b/css/style.css
@@ -268,11 +268,12 @@
 }
 
 .page-header {
-    background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url(../img/carousel-1.jpg);
+    background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url(../img/cum-gian-khoan-su-tu-trang-cuu.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 
 .page-header-inner {
     background: rgba(15, 23, 43, .7);
@@ -320,6 +321,11 @@
 .section-title.text-start::after {
     width: calc(100% + 60px);
     left: 0;
+}
+
+.detail-cat-img {
+    height: 180px;
+    object-fit: contain;
 }
 
 
